fix: add align left to new element

--- a/src/dzs-chip-selector/style/_inputNewElement.scss
+++ b/src/dzs-chip-selector/style/_inputNewElement.scss
@@ -23,6 +23,8 @@
   text-align: inherit;
   box-sizing: content-box;
 
+  text-align: left;
+
   appearance: none;
   margin: 4px;
 }
